# darwin

./: .gitignore  CONTRIBUTING.md  README.md  init.sh  k8s-setup.sh
artifact-builder/: README.md
darwin-cluster-manager/charts/ray-cluster/: values.yaml
darwin-cluster-manager/charts/spark-history-server/: values.yaml
darwin-cluster-manager/constants/: constants.go
darwin-cluster-manager/rest/clusterv2/: clusterv2_rest.go
darwin-cluster-manager/services/clusterv2/: clusterv2_service.go
darwin-compute/app_layer/src/compute_app_layer/routers/: libraries_router.py
darwin-compute/core/src/compute_core/: compute.py
deployer/images/: Dockerfile-golang
deployer/images/golang-1.18/: Dockerfile
deployer/images/python-3.9.7/: Dockerfile
deployer/scripts/: image-builder.sh
examples/house-price-prediction/: train_house_pricing_model.ipynb
examples/iris-classification/: train_iris_model.ipynb
helm/nginx-proxy-server/: README.md  values.yaml
hermes-cli/: CLI.md
hermes-cli/hermes/src/: main.py
hermes-cli/hermes/src/cli/: deployer_request_dtos.py  hermes_deployer.py
ml-serve-app/: README.md
ml-serve-app/runtime/darwin-serve-runtime/src/: main.py
mlflow/: NOTICE  README.md
mlflow/app_layer/: setup.cfg  setup.py
mlflow/app_layer/src/mlflow_app_layer/: main.py
mlflow/app_layer/src/mlflow_app_layer/controllers/: experiment.py  model.py  proxy.py  run.py  user.py
mlflow/app_layer/src/mlflow_app_layer/service/: mlflow.py
mlflow/app_layer/src/mlflow_app_layer/util/: auth_utils.py
mlflow/sdk/: setup.py
mlflow/sdk/darwin_mlflow/: client.py
(+20 files in other folders)
